--- a/privacy.html
+++ b/privacy.html
@@ -142,13 +142,14 @@
                         <div class="post8 wow fadeInLeft">
                             <h3>Privacy Statement</h3>
 
-                            Big Bir is committed to protecting your privacy and developing technology that gives you the most powerful and safe online
+                           <p>Big Bir is committed to protecting your privacy and developing technology that gives you the most powerful and safe online
                             experience. This Statement of Privacy applies to the Big Bir Web site and governs data collection
                             and usage. By using the Big Bir website, you consent to the data practices described in this
-                            statement.
-
-                            <h4>Collection of your Personal Information</h4>
-                            Big Bir collects personally identifiable information, such as your e-mail address, name, home or work address or telephone
+                            statement.</p>
+                        </div>
+                        <div class="post8">
+                            <h3>Collection of your Personal Information</h3>
+                            <p>Big Bir collects personally identifiable information, such as your e-mail address, name, home or work address or telephone
                             number. Big Bir also collects anonymous demographic information, which is not unique to you,
                             such as your ZIP code, age, gender, preferences, interests and favorites. There is also information
                             about your computer hardware and software that is automatically collected by Big Bir. This information
@@ -161,10 +162,12 @@
                             you to review the privacy statements of Web sites you choose to link to from Big Bir so that
                             you can understand how those Web sites collect, use and share your information. Big Bir is not
                             responsible for the privacy statements or other content on Web sites outside of the Big Bir and
-                            Big Bir family of Web sites.
+                            Big Bir family of Web sites.</p>
+                        </div>
+                        <div class="post8">
 
-                            <h4>Use of your Personal Information</h4>
-                            Big Bir collects and uses your personal information to operate the Big Bir Web site and deliver the services you have requested.
+                            <h3>Use of your Personal Information</h3>
+                            <p>Big Bir collects and uses your personal information to operate the Big Bir Web site and deliver the services you have requested.
                             Big Bir may also use your personally identifiable information to inform you of other products
                             or services available from Big Bir and its affiliates. Big Bir may also contact you via surveys
                             to conduct research about your opinion of current services or of potential new services that
@@ -185,10 +188,12 @@
                             in the good faith belief that such action is necessary to: (a) conform to the edicts of the law
                             or comply with legal process served on Big Bir or the site; (b) protect and defend the rights
                             or property of Big Bir; and, (c) act under exigent circumstances to protect the personal safety
-                            of users of Big Bir, or the public.
+                            of users of Big Bir, or the public.</p>
+                        </div>
+                        <div class="post8">
 
-                            <h4>Use of Cookies</h4>
-                            The Big Bir Web site use "cookies" to help you personalize your online experience. A cookie is a text file that is placed
+                            <h3>Use of Cookies</h3>
+                            <p>The Big Bir Web site use "cookies" to help you personalize your online experience. A cookie is a text file that is placed
                             on your hard disk by a Web page server. Cookies cannot be used to run programs or deliver viruses
                             to your computer. Cookies are uniquely assigned to you, and can only be read by a web server
                             in the domain that issued the cookie to you. One of the primary purposes of cookies is to provide
@@ -201,23 +206,29 @@
                             that you customized. You have the ability to accept or decline cookies. Most Web browsers automatically
                             accept cookies, but you can usually modify your browser setting to decline cookies if you prefer.
                             If you choose to decline cookies, you may not be able to fully experience the interactive features
-                            of the Big Bir services or Web sites you visit.
+                            of the Big Bir services or Web sites you visit.</p>
+                        </div>
+                        <div class="post8">
 
-                            <h4>Security of your Personal Information</h4>
-                            Big Bir secures your personal information from unauthorized access, use or disclosure. Big Bir secures the personally identifiable
+                            <h3>Security of your Personal Information</h3>
+                            <p>Big Bir secures your personal information from unauthorized access, use or disclosure. Big Bir secures the personally identifiable
                             information you provide on computer servers in a controlled, secure environment, protected from
                             unauthorized access, use or disclosure. When personal information (such as a credit card number)
                             is transmitted to other Web sites, it is protected through the use of encryption, such as the
-                            Secure Socket Layer (SSL) protocol.
+                            Secure Socket Layer (SSL) protocol.</p>
+                        </div>
+                        <div class="post8">
 
-                            <h4>Changes to this Statement</h4>
-                            Big Bir will occasionally update this Statement of Privacy to reflect company and customer feedback. Big Bir encourages you
-                            to periodically review this Statement to be informed of how Big Bir is protecting your information.
+                            <h3>Changes to this Statement</h3>
+                            <p>Big Bir will occasionally update this Statement of Privacy to reflect company and customer feedback. Big Bir encourages you
+                            to periodically review this Statement to be informed of how Big Bir is protecting your information.</p>
+                        </div>
+                        <div class="post8">
 
-                            <h4>Contact Information</h4>
-                            Big Bir welcomes your comments regarding this Statement of Privacy. If you believe that Big Bir has not adhered to this Statement,
+                            <h3>Contact Information</h3>
+                            <p>Big Bir welcomes your comments regarding this Statement of Privacy. If you believe that Big Bir has not adhered to this Statement,
                             please contact Big Bir at 1-604-219-4738. We will use commercially reasonable efforts to promptly
-                            determine and remedy the problem.
+                            determine and remedy the problem.</p>
                         </div>
                     </div>
                 </div>
