--- a/privacy.html
+++ b/privacy.html
@@ -147,7 +147,7 @@
                             and usage. By using the Big Bir website, you consent to the data practices described in this
                             statement.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
                             <h3>Collection of your Personal Information</h3>
                             <p>Big Bir collects personally identifiable information, such as your e-mail address, name, home or work address or telephone
                             number. Big Bir also collects anonymous demographic information, which is not unique to you,
@@ -164,7 +164,7 @@
                             responsible for the privacy statements or other content on Web sites outside of the Big Bir and
                             Big Bir family of Web sites.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
 
                             <h3>Use of your Personal Information</h3>
                             <p>Big Bir collects and uses your personal information to operate the Big Bir Web site and deliver the services you have requested.
@@ -190,7 +190,7 @@
                             or property of Big Bir; and, (c) act under exigent circumstances to protect the personal safety
                             of users of Big Bir, or the public.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
 
                             <h3>Use of Cookies</h3>
                             <p>The Big Bir Web site use "cookies" to help you personalize your online experience. A cookie is a text file that is placed
@@ -208,7 +208,7 @@
                             If you choose to decline cookies, you may not be able to fully experience the interactive features
                             of the Big Bir services or Web sites you visit.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
 
                             <h3>Security of your Personal Information</h3>
                             <p>Big Bir secures your personal information from unauthorized access, use or disclosure. Big Bir secures the personally identifiable
@@ -217,13 +217,13 @@
                             is transmitted to other Web sites, it is protected through the use of encryption, such as the
                             Secure Socket Layer (SSL) protocol.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
 
                             <h3>Changes to this Statement</h3>
                             <p>Big Bir will occasionally update this Statement of Privacy to reflect company and customer feedback. Big Bir encourages you
                             to periodically review this Statement to be informed of how Big Bir is protecting your information.</p>
                         </div>
-                        <div class="post8">
+                        <div class="post8 wow fadeInLeft">
 
                             <h3>Contact Information</h3>
                             <p>Big Bir welcomes your comments regarding this Statement of Privacy. If you believe that Big Bir has not adhered to this Statement,
